Fixing unused imports