@@ -7,9 +7,7 @@ import org.springframework.http.*;
 import org.springframework.stereotype.Component;
 import org.springframework.web.client.RestTemplate;
 
-import java.lang.reflect.ParameterizedType;
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -20,9 +18,9 @@ public class RestTemplateIWS {
         String fooResourceUrl = "https://iws-brazil-labs-iws-recruiting-bands-staging.iwsbrazil.io/api/full";
 
         HttpHeaders headers = new HttpHeaders();
-        headers.setAccept(Arrays.asList(MediaType.APPLICATION_JSON));
+        headers.setAccept(List.of(MediaType.APPLICATION_JSON));
         HttpEntity<String> entity = new HttpEntity<>(headers);
-        ParameterizedTypeReference<List<Band>> typeRef = new ParameterizedTypeReference<List<Band>>(){};
+        ParameterizedTypeReference<List<Band>> typeRef = new ParameterizedTypeReference<>(){};
         List<Band> body = restTemplate.exchange(fooResourceUrl, HttpMethod.GET, entity, typeRef).getBody();
 
         if (Objects.nonNull(body)) {
